--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@clerk/nextjs": "^6.34.0",
     "@clerk/themes": "^2.4.29",
     "@prisma/client": "^6.18.0",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "axios": "^1.13.1",
     "class-variance-authority": "^0.7.1",
