--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next": "16.0.0",
     "next-themes": "^0.4.6",
     "prisma-client": "^0.0.0",
+    "qrcode.react": "^4.2.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "tailwind-merge": "^3.3.1",
