--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^17.2.3",
     "lucide-react": "^0.546.0",
     "next": "16.0.0",
+    "next-cloudinary": "^6.17.5",
     "next-themes": "^0.4.6",
     "prisma-client": "^0.0.0",
     "qrcode.react": "^4.2.0",
