--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "axios": "^1.13.1",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.8.0",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
+    "fs": "^0.0.1-security",
     "lucide-react": "^0.546.0",
     "next": "16.0.0",
     "next-cloudinary": "^6.17.5",
