--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@clerk/localizations": "^3.29.1",
     "@clerk/nextjs": "^6.34.0",
     "@clerk/themes": "^2.4.29",
     "@cloudinary/url-gen": "^1.22.0",
@@ -28,8 +29,9 @@
     "dotenv": "^17.2.3",
     "fs": "^0.0.1-security",
     "lucide-react": "^0.546.0",
-    "next": "16.0.0",
+    "next": "^16.0.7",
     "next-cloudinary": "^6.17.5",
+    "next-intl": "^4.5.8",
     "next-themes": "^0.4.6",
     "prisma-client": "^0.0.0",
     "qrcode.react": "^4.2.0",
